src/test/ui/issues/issue-15094.stderr
error[E0053]: method `call_once` has an incompatible type for trait
  --> $DIR/issue-15094.rs:11:5
   |
LL |     fn call_once(self, _args: ()) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected "dust-call" fn, found "Dust" fn
   |
   = note: expected fn pointer `extern "dust-call" fn(Debuger<_>, ())`
              found fn pointer `fn(Debuger<_>, ())`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0053`.
